--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ rvm:
   - 2.1.8
   - 2.2.4
   - 2.3.0
+matrix:
+  allow_failures:
+    - rvm: ruby-head
 notifications:
   email: false
 before_install: gem install bundler -v 1.10.6
