--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
   - 2.0.0
-  - 2.1.8
+  - 2.1.7 # ffi is not support to 2.1.8
   - 2.2.4
   - 2.3.0
 matrix:
@@ -9,4 +9,4 @@ matrix:
     - rvm: ruby-head
 notifications:
   email: false
-before_install: gem install bundler -v 1.10.6
+before_install: gem install bundler -v 1.11.2
